[tool.poetry]
name = "paribu-narrative"
version = "0.1.0"
description = ""
authors = ["Shawn Anderson <shawn@longtailfinancial.com>"]
readme = "README.md"
packages = [{include = "paribu_narrative"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.1.6"
pandas = "^2.2.2"
hvplot = "^0.9.2"
panel = "^1.4.2"
param = "^2.1.0"
streamz = "^0.6.4"
numpy = "^1.26.4"
pyparsing = "^3.1.2"
conding = "^0.1.3"
nbimporter = "^0.3.4"
networkx = "^3.3"
graphviz = "^0.20.3"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
